{
  "alert": {
    "prevent_go_back": {
      "description": "You have unsaved changes. Are you sure to discard them and leave the screen?",
      "discard": "Discard",
      "do_not_leave": "Don't leave",
      "title": "Discard changes?"
    },
    "session_expired": {
      "description": "Try to log in again",
      "title": "Your current session expired"
    }
  },
  "app_information": "Shake your device to open developer menu",
  "bottom_tabs": {
    "categories": "Categories",
    "details": "Details",
    "example": "Example",
    "home": "Home",
    "profile": "Profile",
    "settings": "Settings"
  },
  "common": {
    "add": "Add",
    "back": "Back",
    "cancel": "Cancel",
    "change": "Change",
    "continue": "Continue",
    "go_back": "Go back",
    "remove": "Remove",
    "save": "Save",
    "search": "Search",
    "try_again_later": "Please try again later",
    "try_again": "Try again",
    "upload": "Upload"
  },
  "errors": {
    "invalid_email": "Niepoprawny adres e-mail",
    "invalid_password": "Niepoprawne hasło",
    "missing_auth": "Missing auth",
    "play_services_not_available": "Usługi play są niedostępne.",
    "screen_not_found": "NotFound screen",
    "something_went_wrong": "Something went wrong",
    "to_may_requests": "To many request. Please try again after few minutes",
    "token_expired": "Token expired"
  },
  "examples_component": {
    "example": "Example"
  },
  "form": {
    "checkbox": {
      "privacy_policy": "I’ve read and accept Privacy Policy",
      "remember_me": "Remember me",
      "terms_accepted": "I agree to the Terms and Conditions"
    },
    "errors": {},
    "labels": {
      "confirm_password": "Confirm password",
      "email": "E-mail address",
      "first_name": "First name",
      "last_name": "Last name",
      "new_password": "New password",
      "old_password": "Old password",
      "password": "Password"
    },
    "placeholders": {
      "confirm_password": "Confirm password",
      "create_password": "Create a password",
      "email": "Enter your email",
      "first_name": "Enter your first name",
      "last_name": "Enter your last name",
      "new_password": "Enter new password",
      "old_password": "Enter current password",
      "password": "Password"
    },
    "select": {},
    "validation": {
      "invalid_email_format": "Incorrect e-mail address format",
      "password_min_1_special_char": "Must contain one special character ",
      "password_min_8_chars": "Must be at least 8 characters",
      "passwords_does_not_match": "Passwords does not match",
      "required": "This field is required"
    }
  },
  "hello": "Welcome",
  "navigation": {
    "screen_titles": {
      "application_info": "ApplicationInfo",
      "blog": "Blog",
      "colors": "Colors",
      "components": "Components",
      "data_from_be_screen_example": "Data from BE",
      "details": "Details",
      "examples_stack": "Examples",
      "examples": "Examples",
      "forgot_password": "Forgot password",
      "home_stack": "Home",
      "home": "Home",
      "main_tab": "MainTab",
      "not_found": "Not Found",
      "profile": "Profile",
      "resetLinkSent": "Reset link sent",
      "settings": "Settings",
      "sign_in": "Sign in",
      "sign_up": "Sign up",
      "test_form": "Test form",
      "typography": "Typography"
    }
  },
  "toast": {
    "error": {},
    "success": {
      "new_account_created": "A new account has been created. An email with an activation link was sent to {{userEmail}}.",
      "profile_updated": "Successfully updated your profile data."
    },
    "title": {
      "error": "An error occurred",
      "info": "Additional info",
      "success": "Success",
      "warning": "Attention"
    },
    "warning": {}
  },
  "update": {
    "alert_message": "You will have to restart the application to have better experiences while using it",
    "alert_title": "New version available",
    "restart": "Restart",
    "update_now": "Update now"
  },
  "application_info_screen": {
    "navigation_info": "When you will try to go back it will double ask if you really want to leave \n"
  },
  "colors_screen": {
    "colors_label": "Colors"
  },
  "components_screen": {
    "button_variants": {
      "disabled": "Button disabled",
      "header": "Button variants",
      "link_color": "Button link color",
      "link_destructive": "Button link destructive",
      "link_gray": "Button link gray",
      "loading": "Button loading",
      "primary_destructive": "Button primary destructive",
      "primary": "Button primary",
      "secondary_color": "Button secondary color",
      "secondary_destructive": "Button secondary destructive",
      "secondary_gray": "Button secondary gray",
      "tertiary_color": "Button tertiary color",
      "tertiary_destructive": "Button tertiary destructive",
      "tertiary_gray": "Button tertiary gray",
      "with_icons": "Button with icons"
    },
    "loader_variants": {
      "bricks": "Bricks loader",
      "bubbles": "Bubbles loader",
      "circle": "Circle loader",
      "default": "Default loader",
      "disk": "Disk loader",
      "header": "Loader variants"
    },
    "notification": {
      "description": "by react-native-notificated 🎉",
      "title": "In-app notification example"
    },
    "test_notification": "Test notification",
    "typography": {
      "label": "Typography",
      "2xl": "2xl",
      "3xl": "3xl",
      "4xl": "4xl",
      "lg": "lg",
      "md": "md",
      "sm": "sm",
      "xl": "xl",
      "xs": "xs"
    }
  },
  "confirm_email_screen": {
    "go_back_login": "Go back to login screen",
    "verification_failed": "Ops, we could not verify your e-mail address.",
    "verification_in_progress": "E-mail verification in progress ...",
    "verification_succeed": "E-mail address has been confirmed successfully."
  },
  "details_screen": {
    "awesome": "Awesome 🎉",
    "open_bottom_sheet": "Open BottomSheetModal",
    "screen_params": "Screen params: {{params}}",
    "title": "This is details screen"
  },
  "examples_screen": {
    "go_to_application_info": "Go to ApplicationInfo",
    "go_to_colors": "Go to Colors",
    "go_to_components": "Go to Components",
    "go_to_home_stack_details": "Go to HomeStackDetails",
    "go_to_screen_test_form": "Go to test form",
    "go_to_screen_with_BEdata": "Go to screen with data from BE",
    "go_to_settings": "Go to Settings",
    "go_to_typography": "Go to Typography",
    "go_to_style_benchmark": "Go to Style Benchmark",
    "go_to_user_session": "Go to user session",
    "header": "This is Example screen"
  },
  "forgot_password_screen": {
    "back_to_login": "Back to login",
    "forgot_password": "Forgot password?",
    "no_worries": "No worries, we’ll send you reset instructions.",
    "reset_password": "Reset password"
  },
  "home_screen": {
    "details": "Details",
    "header_title": "BACA - react native starter",
    "header_subtitle": "Start your react native project and boost your productivity",
    "read_docs": "Read docs",
    "try_it": "Try it"
  },
  "landing_screen": {
    "go_to_blog": "Open blog",
    "go_to_push_notifications_helpers": "Open push notifications helpers",
    "go_to_form": "Open full screen form",
    "login_cta": "Log in",
    "sign_up": "Sign up"
  },
  "reset_password_complete": {
    "password_reset": "Password reset",
    "password_successfully_reset": "Your password has been successfully reset. Click below to log in magically."
  },
  "reset_password_link_sent_screen": {
    "check_email": "Check your email",
    "click_to_resend": "Click to resend",
    "did_not_receive": "Didn’t receive the email?",
    "open_email_app": "Open email app",
    "we_sent_link": "We sent a password reset link to"
  },
  "reset_password_screen": {
    "reset_password": "Reset password",
    "set_new_password": "Set new password",
    "welcome_back": "Welcome back! Please enter your details."
  },
  "settings_screen": {
    "copy_push_token": "Copy push token",
    "current_theme": "Current theme: {{theme}}",
    "selected": " - selected",
    "sign_out": "Sign out!",
    "list_heading": "Settings",
    "color_scheme_picker_label": "Pick app color scheme",
    "language_picker_label": "Pick app language"
  },
  "profile_screen": {
    "are_you_sure": "Are you sure?",
    "photo_innerText": "No Image",
    "profile": "Profile",
    "remove_account_desc": "This action cannot be undone.\n\nYou will lose access to your account. If you have an active subscription you will lose access to it.\n\nPlease make sure you are certain about this action.",
    "remove_account": "Remove account",
    "update_your_details": "Update your personal details here.",
    "your_photo_description": "This will be displayed on your profile.",
    "your_photo": "Your photo"
  },
  "sign_in_screen": {
    "alert": {
      "title": "Use the following credentials to sign in (dev mode)",
      "description": "mateusz.rostkowski+baca@binarapps.com\nTest1234,\n\nPress alert to set them in the form"
    },
    "do_not_have_an_account": "Don't have an account?",
    "forgot_password": "Forgot password",
    "sign_in_by_apple": "Log in with Apple",
    "sign_in_by_facebook": "Log in with Facebook",
    "sign_in_by_google": "Log in with Google",
    "sign_in": "Log in",
    "sign_up": "Sign up",
    "welcome_back_enter_details": "Please enter your details",
    "welcome_back": "Welcome back"
  },
  "sign_up_screen": {
    "already_have_an_account": "Do you have an account?",
    "get_started": "Get started",
    "log_in": "Log in",
    "sign_up": "Sign up",
    "start_free_trail": "Start your 30-day free trial."
  },
  "test_form": {
    "additional_comment": "Additional comment",
    "age": "Age",
    "city_placeholder": "City",
    "classic_music": "Classic music",
    "comment": "Comment",
    "contact_data": "Contact data",
    "cooking": "Cooking",
    "dancing": "Dancing",
    "education": "Education",
    "email_placeholder": "E-mail",
    "birth_date": "Birth date",
    "birth_date_placeholder": "Birth date",
    "errors": {
      "age": "Age is required",
      "city": "City is required",
      "education": "Education is required",
      "email": "Email is required",
      "interests": "At least 1 interest is needed",
      "music": "At least 1 music is needed",
      "name": "Name is required",
      "phone_format": "Phone number must be in form 000-000-000",
      "phone": "Phone is required",
      "postalCode_format": "Postal code must be in form 00-000",
      "postalCode": "Postal code is required",
      "birth_date": "Birth date is required",
      "sex": "Sex is is required",
      "shoeSize": "Shoe size is required",
      "surname": "Surname is required"
    },
    "female": "Female",
    "games": "Games",
    "interests": "Interests",
    "male": "Male",
    "middle": "Middle",
    "name_placeholder": "Name",
    "phone_placeholder": "Phone number",
    "postalCode_placeholder": "Postal code",
    "postsecondary": "Postsecondary",
    "primary": "Primary",
    "secondary": "Secondary",
    "sex": "Sex",
    "shoe_size": "Shoe size",
    "sport": "Sport",
    "submit": "Submit",
    "surname_placeholder": "Surname",
    "which_music": "what kind of music do you listen ?"
  },
  "thanks": "Thank you for using the best template for expo apps",
  "typography_screen": {
    "display_font_size": "Display fontSize: ",
    "text_font_size": "Text fontSize: "
  }
}
