appId: ${APP_ID}
tags:
  - home
---
- assertVisible:
    id: 'home_screen:full_screen_form'
- tapOn:
    id: 'home_screen:full_screen_form'
- extendedWaitUntil:
    visible: 'Contact data'
    timeout: 10000
- assertVisible: 'Name* Name'
- tapOn: 'Name* Name'
- inputText: 'RandomName'
- assertVisible: 'Surname* Surname'
- tapOn: 'Surname* Surname'
- inputText: 'RandomSurname'
- assertVisible: 'E-mail* E-mail'
- tapOn: 'E-mail* E-mail'
- inputRandomEmail
- assertVisible: 'Phone number* Phone number'
- tapOn: 'Phone number* Phone number'
- inputText: '600-000-000'
- assertVisible: 'Postal code* Postal code'
- tapOn: 'Postal code* Postal code'
- inputText: '00-000'
- hideKeyboard
- assertVisible: 'City* City'
- tapOn: 'City* City'
- inputRandomText
- hideKeyboard
- assertVisible: 'Age* 18-30 31-40 41-50 51-60 61-70 71-80 81-90 91-100'
- tapOn: '18-30'
- scrollUntilVisible:
    element:
      text: 'what kind of music do you listen ?* Metal Heavy Metal Rock Pop Rap'
    direction: DOWN
    timeout: 15000
    speed: 40
    visibilityPercentage: 100
- assertVisible: 'Sex* Male Female'
- tapOn: 'Male'
- assertVisible: 'Education* Education '
- tapOn: 'Education* Education '
- assertVisible: 'Bottom sheet handle'
- tapOn:
    point: 6%,91%
- assertVisible: 'Shoe size* Shoe size '
- tapOn: 'Shoe size* Shoe size '
- assertVisible: 'Bottom sheet handle'
- tapOn:
    point: 6%,91%
- scrollUntilVisible:
    element:
      text: 'Additional comment'
    direction: DOWN
    timeout: 15000
    speed: 40
    visibilityPercentage: 100
- assertVisible: 'what kind of music do you listen ?* Metal Heavy Metal Rock Pop Rap'
- tapOn: 'Rock'
- tapOn: 'Pop'
- tapOn: 'Rap'
- scrollUntilVisible:
    element:
      text: 'Submit'
    direction: DOWN
    timeout: 15000
    speed: 40
    visibilityPercentage: 100
- assertVisible: 'Interests* IT Cooking Sport Games Dancing'
- tapOn: 'IT'
- tapOn: 'Sport'
- assertVisible: 'Submit'
- tapOn: 'Submit'
- assertVisible: '(tabs)'
- tapOn: '(tabs)'
