appId: ${APP_ID}
tags:
  - example
---
- assertVisible: 'Go to ApplicationInfo'
- tapOn: 'Go to ApplicationInfo'
- assertVisible: 'Go back'
- tapOn: 'Go back'
- assertVisible: "Don't leave"
- tapOn: "Don't leave"
- assertVisible: 'Go back'
- tapOn: 'Go back'
- assertVisible: 'Discard'
- tapOn: 'Discard'
