appId: ${APP_ID}
tags:
  - example
---
- assertVisible: 'Go to Components'
- tapOn:
    text: 'Go to Components'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Test notification'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Button primary'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: ' Button with icons '
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Button primary destructive'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Button secondary color'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Button secondary gray'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Button secondary destructive'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Button tertiary color'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Button tertiary gray'
    waitToSettleTimeoutMs: 25
- scrollUntilVisible:
    element:
      text: ' Log in with Apple'
    direction: DOWN
    timeout: 15000
    speed: 40
    visibilityPercentage: 100
- tapOn: 'Button tertiary destructive'
- tapOn: 'Button link color'
- tapOn: 'Button link gray'
- tapOn: 'Button link destructive'
- tapOn: 'Log in with Google'
- tapOn: ' Log in with Facebook'
- tapOn: ' Log in with Apple'
- assertVisible: 'Remember me'
- tapOn: 'Remember me'
- scrollUntilVisible:
    element:
      text: 'Disk loader'
    direction: DOWN
    timeout: 12500
    speed: 72
    visibilityPercentage: 50
- tapOn:
    text: '41-50'
    waitToSettleTimeoutMs: 25
- tapOn:
    text: 'Examples'
    waitToSettleTimeoutMs: 25
