appId: ${APP_ID}
tags:
  - example
---
- assertVisible: 'Go to HomeStackDetails'
- tapOn: 'Go to HomeStackDetails'
- assertVisible: 'Open BottomSheetModal'
- tapOn: 'Open BottomSheetModal'
- tapOn:
    point: 50%,50%
- assertVisible: 'Home'
- tapOn: 'Home'
- assertVisible: ' Example'
- tapOn: ' Example'
