appId: ${APP_ID}
tags:
  - example
---
- assertVisible: 'Go to test form'
- tapOn: 'Go to test form'
- assertVisible: 'Contact data'
- assertVisible: 'Name* Name'
- tapOn: 'Name* Name'
- inputText: 'RandomName'
- assertVisible: 'Surname* Surname'
- tapOn: 'Surname* Surname'
- inputText: 'RandomSurname'
- assertVisible: 'E-mail* E-mail'
- tapOn: 'E-mail* E-mail'
- inputRandomEmail
- assertVisible: 'Phone number* Phone number'
- tapOn: 'Phone number* Phone number'
- inputText: '600-000-000'
- assertVisible: 'Postal code* Postal code'
- tapOn: 'Postal code* Postal code'
- inputText: '00-000'
- assertVisible: 'City* City'
- tapOn: 'City* City'
- inputRandomText
- assertVisible: 'Age* 18-30 31-40 41-50 51-60 61-70 71-80 81-90 91-100'
- tapOn: '18-30'
- scrollUntilVisible:
    element:
      text: 'Interests* IT Cooking Sport Games Dancing'
    direction: DOWN
    timeout: 15000
    speed: 40
    visibilityPercentage: 100
- assertVisible: 'Sex* Male Female'
- tapOn: 'Male'
- assertVisible: 'Education* Education '
- tapOn: 'Education* Education '
- assertVisible: 'Bottom sheet handle'
# - tapOn: 'Postsecondary'
- assertVisible: 'Shoe size* Shoe size '
- tapOn: 'Shoe size* Shoe size '
- assertVisible: 'Bottom sheet handle'
# - tapOn: '40'
- scrollUntilVisible:
    element:
      text: 'Additional comment'
    direction: DOWN
    timeout: 15000
    speed: 40
    visibilityPercentage: 100
- assertVisible: 'what kind of music do you listen ?* Metal Heavy Metal Rock Pop Rap'
- tapOn: 'Rock'
- tapOn: 'Pop'
- tapOn: 'Rap'
- assertVisible: 'Interests* IT Cooking Sport Games Dancing'
- tapOn: 'IT'
- tapOn: 'Sport'
- scrollUntilVisible:
    element:
      text: 'Submit'
    direction: DOWN
    timeout: 15000
    speed: 40
    visibilityPercentage: 100
- tapOn: 'Submit'
- assertVisible: 'Examples'
- tapOn: 'Examples'
