appId: ${APP_ID}
tags:
  - example
---
- assertVisible: 'Go to Typography'
- tapOn: 'Go to Typography'
- assertVisible: '1'
- tapOn: '1'
- tapOn: '0'
- scrollUntilVisible:
    element:
      text: 'Display - MdBold'
    direction: DOWN
    timeout: 15000
    speed: 90
    visibilityPercentage: 100
    centerElement: true
- scrollUntilVisible:
    element:
      text: 'Text - XsRegular'
    direction: DOWN
    timeout: 15000
    speed: 90
    visibilityPercentage: 100
- assertVisible: 'Examples'
- tapOn: 'Examples'
